<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_background"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:queryBackground="@color/transparent"
        app:iconifiedByDefault="false"
        app:searchIcon="@drawable/search_ic"
        app:queryHint="@string/search_for_a_city"
        android:background="@drawable/bg_search"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/location_ic"
            android:tint="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans_samibold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="90dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_samibold"
        android:layout_gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="25sp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/temprature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00 °C"
        android:layout_below="@+id/today"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_samibold"
        android:layout_gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="35sp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sunny_animation"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        app:lottie_rawRes="@raw/sun_animation"
        app:lottie_autoPlay="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        app:lottie_loop="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sunny_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunny"
        android:layout_below="@+id/sunny_animation"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/open_sans_samibold"
        android:layout_gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="23sp"/>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temprature"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/minTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_23_22"
            android:textStyle="bold"
            android:drawablePadding="5dp"
            android:fontFamily="@font/open_sans_samibold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/maxTemp"
            android:drawablePadding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_22_23"
            android:layout_marginTop="3dp"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans_samibold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:layout_below="@+id/sunny_txt"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans_samibold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="23sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25 January 2023"
        android:layout_below="@+id/dayName"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans_samibold"
        android:layout_gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_below="@+id/dateName"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_card">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/humidity"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/humadity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_0"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00_m_p"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/conditions"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunny"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunrise"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunset"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sea"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0000 hPa"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sea"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_samibold"
        android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rudera_pratap_singh"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/open_sans_samibold"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>